--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Alpay Celik, ein erfahrener Fullstack Webentwickler, präsentiert seine neuesten Projekte, die mit dem MERN-Stack entwickelt wurden."
+      content="Limi Mathew,Web Developer"
     />
-    <title>Alpay Celik - Fullstack Webentwickler | Portfolioseite</title>
+    <title>Limi Mathew - Web Developer | Portfoliosite</title>
   </head>
   <body>
     <div id="root"></div>
